removed button success

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data" class="d-grid gap-2">
                         <input type="file" name="file" id="file" class="form-control" required>
-                        <button type="submit" class="btn btn-success">Carica</button>
+                        <button type="submit" class="btn">Carica</button>
                     </form>
                     <!-- Blocchi percentuali aggiunti qui -->
                 </div>
