Fix in features

--- a/interface/templates/features.html
+++ b/interface/templates/features.html
@@ -188,9 +188,9 @@
     <div class="section">
       <div class="text">
         <div class="quote">
-          "Una macchina può essere definita intelligente se riesce a ingannare un essere umano facendogli credere che sia umana."
+          Una macchina può essere definita intelligente se riesce a ingannare un essere umano facendogli credere che sia umana.
         </div>
-        <p class="text-muted">- Alan Turing</p>
+        <p class="text-muted"><a href="https://www.google.it"  style="text-decoration-line: none">- Alan Turing</a></p>
       </div>
       <div class="image">
         <img src="../static/images/human.png" alt="Human Image">
@@ -206,8 +206,8 @@
         <div class="title">Cos'è SGARB-AI?</div>
         <div class="info-section">
           SGARB-AI è un sistema avanzato di intelligenza artificiale progettato per analizzare e comprendere la creatività digitale.
-          Con strumenti sofisticati e algoritmi all'avanguardia, SGARB-AI rappresenta l'ultima frontiera nella valutazione di immagini, testi e suoni
-          generati dall'uomo e dall'IA.
+          Con strumenti sofisticati e algoritmi all'avanguardia, SGARB-AI rappresenta l'ultima frontiera nella valutazione di immagini
+          generate dall'uomo e dall'IA.
         </div>
       </div>
     </div>
