Cambiato features in About Us, e aggiornato footer

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -34,7 +34,7 @@
 
             <!-- Navigation centered -->
             <nav class="nav">
-                <a class="nav-link" href="/features">Features</a>
+                <a class="nav-link" href="/features">About Us</a>
                 <a class="nav-link active" href="/">Home</a>
                 <a class="nav-link" href="/contact">Contacts</a>
             </nav>
@@ -79,7 +79,7 @@
     <!-- Footer -->
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>&copy; 2025 SGARB-AI <i>by The Simps</i>.</p>
+            <p>&copy; 2025 SGARB-AI.</p>
         </div>
     </footer>
 </div>
