--- a/interface/templates/Contact.html
+++ b/interface/templates/Contact.html
@@ -33,7 +33,7 @@
 
       <!-- Navigation centered -->
       <nav class="nav">
-        <a class="nav-link" href="/features">Features</a>
+        <a class="nav-link" href="/features">About Us</a>
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link active" href="/contact">Contacts</a>
       </nav>
@@ -84,7 +84,7 @@
   <!-- Footer -->
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>&copy; 2025 SGARB-AI <i>by The Simps</i>.</p>
+      <p>&copy; 2025 SGARB-AI.</p>
     </div>
   </footer>
 </div>
