--- a/interface/templates/features.html
+++ b/interface/templates/features.html
@@ -176,7 +176,7 @@
 
       <!-- Navigation centered -->
       <nav class="nav">
-        <a class="nav-link active" href="/features">Features</a>
+        <a class="nav-link active" href="/features">About Us</a>
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/contact">Contacts</a>
       </nav>
@@ -190,7 +190,7 @@
         <div class="quote">
           Una macchina può essere definita intelligente se riesce a ingannare un essere umano facendogli credere che sia umana.
         </div>
-        <p class="text-muted"><a href="https://www.google.it"  style="text-decoration-line: none">- Alan Turing</a></p>
+        <p class="text-muted"><a href="https://www.instagram.com/noyz79/"  style="text-decoration-line: none">- Alan Turing</a></p>
       </div>
       <div class="image">
         <img src="../static/images/human.png" alt="Human Image">
@@ -216,7 +216,7 @@
   <!-- Footer -->
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>&copy; 2025 SGARB-AI <i>by The Simps</i>.</p>
+      <p>&copy; 2025 SGARB-AI.</p>
     </div>
   </footer>
 </div>
