--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -13,7 +13,7 @@
 
     <!--  Custom CSS -->
     <link rel="stylesheet" href="../static/style.css">
-
+    <link rel="stylesheet" href="../static/build.css">
     <!-- Custom JavaScript -->
     <script src="../static/script.js" defer></script>
 
@@ -21,7 +21,7 @@
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.0/examples/cover/cover.css" rel="stylesheet">
+<!--    <link href="https://getbootstrap.com/docs/4.0/examples/cover/cover.css" rel="stylesheet">-->
 
 </head>
 
