--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -12,8 +12,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
     <!--  Custom CSS -->
+    <link rel="stylesheet" href="../static/build.css?version=1.0">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="../static/build.css">
     <!-- Custom JavaScript -->
     <script src="../static/script.js" defer></script>
 
