--- a/interface/static/build.css
+++ b/interface/static/build.css
@@ -13,10 +13,10 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-    color: #333;
-    text-shadow: none; /* Prevent inheritance from `body` */
-    background-color: #fff;
-    border: .05rem solid #fff;
+    color: #333 !important;
+    text-shadow: none !important; /* Prevent inheritance from `body` */
+    background-color: #fff !important;
+    border: .05rem solid #fff !important;
 }
 
 
@@ -26,24 +26,24 @@ a:hover {
 
 html,
 body {
-    height: 100%;
-    background-color: #333;
+    height: 100% !important;
+    background-color: #333 !important;
 }
 
 body {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    display: -ms-flexbox !important;
+    display: -webkit-box !important;
+    display: flex !important;
+    -ms-flex-pack: center !important;
+    -webkit-box-pack: center !important;
+    justify-content: center !important;
+    color: #fff !important;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5) !important;
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5) !important;
 }
 
 .cover-container {
-    max-width: 42em;
+    max-width: 42em !important;
 }
 
 
@@ -51,11 +51,11 @@ body {
  * Header
  */
 .masthead {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important;
 }
 
 .masthead-brand {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
 }
 
 .nav-masthead .nav-link {
