--- a/interface/templates/features.html
+++ b/interface/templates/features.html
@@ -151,8 +151,8 @@
     }
 
     .text {
-      flex: 1 1 50%;
-      padding: 20px;
+      flex: 1 1 50% !important;
+      padding: 25px !important;
       background: #222;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -191,7 +191,7 @@
         <div class="quote">
           Una macchina può essere definita intelligente se riesce a ingannare un essere umano facendogli credere che sia umana.
         </div>
-        <p class="text-muted"><a href="https://www.instagram.com/noyz79/"  style="text-decoration-line: none">- Alan Turing</a></p>
+        <p class="text-muted text-end">-<a href="https://www.instagram.com/noyz79/" class="at" style="text-decoration-line: none"> Alan Turing</a></p>
       </div>
       <div class="image">
         <img src="../static/images/human.png" alt="Human Image">
